--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
+    "bootstrap": "^4.6.0",
     "next": "10.0.7",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-dom": "17.0.1"
   }
 }
